--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.11.0
 Django==5.2.8
-django-ckeditor==6.7.3
+django-ckeditor-5==0.2.18
 django-js-asset==3.1.2
+gunicorn==23.0.0
+packaging==25.0
 pillow==12.0.0
 sqlparse==0.5.3
